// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlGroup should render correctly with attributes 1`] = `
<div
  class="test-class container"
  data-qa="ControlGroup"
  id="test-id"
>
  <div
    class="container direction-horizontal"
    data-qa="Space"
    style="column-gap: 2px; row-gap: 2px;"
  />
</div>
`;

exports[`ControlGroup should render correctly with children 1`] = `
<div
  class="container"
  data-qa="ControlGroup"
>
  <div
    class="container direction-horizontal"
    data-qa="Space"
    style="column-gap: 2px; row-gap: 2px;"
  >
    <div
      class="container group-horizontal group-start"
      data-qa="TextInput"
    >
      <div
        class="inputSegment"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="inputValue"
          />
          <input
            autocomplete="off"
            class="input"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="placeholder"
      >
        Название поля 1
      </label>
    </div>
    <div
      class="container group-horizontal group-middle"
      data-qa="TextInput"
    >
      <div
        class="inputSegment"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="inputValue"
          />
          <input
            autocomplete="off"
            class="input"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="placeholder"
      >
        Название поля 2
      </label>
    </div>
    <div
      class="container group-horizontal group-end"
      data-qa="TextInput"
    >
      <div
        class="inputSegment"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="inputValue"
          />
          <input
            autocomplete="off"
            class="input"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="placeholder"
      >
        Название поля 3
      </label>
    </div>
  </div>
</div>
`;

exports[`ControlGroup should render correctly with direction prop 1`] = `
<div
  class="container"
  data-qa="ControlGroup"
>
  <div
    class="container direction-vertical"
    data-qa="Space"
    style="column-gap: 2px; row-gap: 2px;"
  >
    <div
      class="container group-vertical group-start"
      data-qa="TextInput"
    >
      <div
        class="inputSegment"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="inputValue"
          />
          <input
            autocomplete="off"
            class="input"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="placeholder"
      >
        Название поля 1
      </label>
    </div>
    <div
      class="container group-vertical group-middle"
      data-qa="TextInput"
    >
      <div
        class="inputSegment"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="inputValue"
          />
          <input
            autocomplete="off"
            class="input"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="placeholder"
      >
        Название поля 2
      </label>
    </div>
    <div
      class="container group-vertical group-end"
      data-qa="TextInput"
    >
      <div
        class="inputSegment"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="inputValue"
          />
          <input
            autocomplete="off"
            class="input"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        class="placeholder"
      >
        Название поля 3
      </label>
    </div>
  </div>
</div>
`;

exports[`ControlGroup should render correctly with no props 1`] = `
<div
  class="container"
  data-qa="ControlGroup"
>
  <div
    class="container direction-horizontal"
    data-qa="Space"
    style="column-gap: 2px; row-gap: 2px;"
  />
</div>
`;
